2005-02-16  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/gcompris/Makefile.am: fixed, was not putting the file in the correct place
	* src/gcompris/gameutil.c: (gcompris_get_menulist): more robust boards xml parsing

2005-02-16  Bruno coudoin  <bruno.coudoin@free.fr>

	Yves improved anim again
	Bruno started the mime type system

	* boards/Makefile.am:
	* boards/anim/animation.js:
	* boards/gcompris/mime_type.xml.in:
	* configure.in:
	* po/POTFILES.in:
	* src/boards/python/anim.py:
	* src/gcompris/file_selector.c: (parseMime), (parse_doc),
	(load_mime_type_from_file):
	* src/gcompris/gameutil.h:
	* src/gcompris/gcompris.c: (setup_window):

2005-02-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Bruno, improved the file selector. Now directory are shown first, and all is alpha sorted.
	Yves improved the anim code.

	* src/boards/python/anim.py:
	* src/gcompris/about.c: (gcompris_about_start):
	* src/gcompris/file_selector.c: (gcompris_file_selector_stop),
	(display_files), (item_event_directory),
	(item_event_file_selector):

2005-02-13  Bruno coudoin  <bruno.coudoin@free.fr>

	* docs/website/sommaire.html: fixed html error
	* src/boards/python/anim.py: improved import/export multiformat by Yves
	* src/boards/python/watercycle.py: fixed cloud position (reported by Ronny Standtke)
	* src/gcompris/about.c: (gcompris_about_start): Added Franck Doucet in the Drawing credits
	* src/gcompris/images_selector.c: (display_image),
	(item_event_imageset_selector): fixed a bug when list was only one line

2005-02-10  Bruno coudoin  <bruno.coudoin@free.fr>

	* docs/fr/gcompris.texi: updated by de Colombel Renaud <renaud.decolombel@free.fr>

2005-02-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Commited Hindi Gujarati translation by jignesh chaudhari
	Commited update of anim.py plus mozilla svg export by Yve Combe
	Fixed file_selector to return the correct file type
	
	* boards/anim/animation.js:
	* boards/flags/gcompris_flags.assetml.in:
	* boards/flags/gu.png: