@@ -1,3 +1,10 @@
+2005-02-18  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	reviewed by: <delete if not using a buddy>
+
+	* boards/anim/animation.js:
+	* src/boards/python/anim.py:
+
 2005-02-16  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* boards/gcompris/Makefile.am: fixed, was not putting the file in the correct place
